networking/cptest1/svc1_app2.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc1-app2
  namespace: cptest1
  labels:
    app: cptest1-dep1-app2
spec:
  selector:
    app: cptest1-dep1-app2  # Matches Pods with the same label
  type: ClusterIP  # Options: ClusterIP, NodePort, LoadBalancer
  ports:
    - protocol: TCP
      port: 80  # Service Port
      targetPort: 80  # Container Port
