networking/cptest1/egress_all_kube_system.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: cptest1
  name: egress-allow-kube-system
spec:
  podSelector:
    matchLabels:
      app: cptest1-dep1-app1
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
          podSelector:
            matchLabels:
              app.kubernetes.io/component: service
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
