networking/cptest1/egress_deny_all.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: egress-deny-all
  namespace: cptest1
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
    - Egress
