networking/cptest1/ingress_allow_from_app.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-allow-from-cptest2-app2
  namespace: cptest1
spec:
  podSelector:
    matchLabels:
      app: cptest1-dep1-app1
  ingress:
  - from:
      - podSelector:
          matchLabels:
            app: cptest2-dep2-app2
