networking/cptest1/ingress_allow_ns.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-allow-cptest1
  namespace: cptest1
spec:
  podSelector:
    matchLabels: {}
  ingress:
  - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: cptest1
