networking/cptest1/ingress_deny_all.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-deny-all
  namespace: cptest1
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Ingress
